day-15/arquivos/policy-1/pod-no-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: myapp
    image: nginx:latest
    ports:
      - containerPort: 80
    # resources:
    #   limits:
    #     cpu: "500m"
    #     memory: "64Mi"
    #   requests:
    #     cpu: "250m"
    #     memory: "32Mi"
